Sapper 25.3.2
* Remove javafx-maven-plugin, use exec-maven-plugin instead
* Java 24
* JavaFX 24