@@ -9,7 +9,7 @@
 
     <groupId>org.panteleyev</groupId>
     <artifactId>sapper</artifactId>
-    <version>25.3.1</version>
+    <version>25.3.2</version>
     <packaging>jar</packaging>
     <name>Sapper Game</name>
 
@@ -86,27 +86,27 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.release>23</maven.compiler.release>
+        <maven.compiler.release>24</maven.compiler.release>
         <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss'Z'</maven.build.timestamp.format>
         <appModule>sapper</appModule>
         <appMainClass>org.panteleyev.sapper.SapperApplication</appMainClass>
         <timestamp>${maven.build.timestamp}</timestamp>
         <!-- Plugins -->
-        <mavenCleanPluginVersion>3.4.0</mavenCleanPluginVersion>
+        <mavenCleanPluginVersion>3.4.1</mavenCleanPluginVersion>
         <mavenResourcePluginVersion>3.3.1</mavenResourcePluginVersion>
-        <mavenCompilerPluginVersion>3.13.0</mavenCompilerPluginVersion>
+        <mavenCompilerPluginVersion>3.14.0</mavenCompilerPluginVersion>
         <mavenJarPluginVersion>3.4.2</mavenJarPluginVersion>
         <mavenSurefirePluginVersion>3.5.2</mavenSurefirePluginVersion>
         <mavenDependencyPluginVersion>3.8.1</mavenDependencyPluginVersion>
-        <javaFxPluginVersion>0.0.8</javaFxPluginVersion>
+        <mavenExecPluginVersion>3.5.0</mavenExecPluginVersion>
         <jlinkMavenPluginVersion>1.1.0</jlinkMavenPluginVersion>
         <jpackageMavenPluginVersion>1.6.6</jpackageMavenPluginVersion>
         <!-- Dependencies -->
-        <javaFxVersion>23.0.1</javaFxVersion>
+        <javaFxVersion>24</javaFxVersion>
         <javaCommonsVersion>1.6.0</javaCommonsVersion>
-        <javaFxHelpersVersion>1.16.0</javaFxHelpersVersion>
+        <javaFxHelpersVersion>1.20.0</javaFxHelpersVersion>
         <javaFreeDesktopVersion>0.5.1</javaFreeDesktopVersion>
-        <jUnitVersion>5.11.3</jUnitVersion>
+        <jUnitVersion>5.12.1</jUnitVersion>
     </properties>
 
     <dependencies>
@@ -256,7 +256,7 @@
                         <modulePath>${project.build.directory}/jmods</modulePath>
                     </modulePaths>
                     <addModules>
-                        <addModule>ALL-MODULE-PATH</addModule>
+                        <addModule>${appModule}</addModule>
                     </addModules>
                     <noHeaderFiles>true</noHeaderFiles>
                     <noManPages>true</noManPages>
@@ -268,7 +268,6 @@
                 <groupId>org.panteleyev</groupId>
                 <artifactId>jpackage-maven-plugin</artifactId>
                 <version>${jpackageMavenPluginVersion}</version>
-
                 <configuration>
                     <name>Sapper</name>
                     <appVersion>${project.version}</appVersion>
@@ -283,26 +282,57 @@
                         <javaOption>-XX:NewRatio=1</javaOption>
                         <javaOption>-Xms100m</javaOption>
                         <javaOption>-Xmx100m</javaOption>
+                        <javaOption>--enable-native-access=javafx.graphics</javaOption>
+                        <javaOption>--sun-misc-unsafe-memory-access=allow</javaOption>
                     </javaOptions>
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>${javaFxPluginVersion}</version>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>${mavenExecPluginVersion}</version>
                 <configuration>
-                    <mainClass>${appModule}/${appMainClass}</mainClass>
+                    <executable>java</executable>
                 </configuration>
                 <executions>
                     <execution>
-                        <id>default-cli</id>
+                        <id>run</id>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>
+                                <argument>-XX:NewRatio=1</argument>
+                                <argument>-Xms100m</argument>
+                                <argument>-Xmx100m</argument>
+                                <argument>--enable-native-access=javafx.graphics</argument>
+                                <argument>--sun-misc-unsafe-memory-access=allow</argument>
+                                <argument>--module-path</argument>
+                                <modulepath/>
+                                <argument>--module</argument>
+                                <argument>${appModule}/${appMainClass}</argument>
+                            </arguments>
+                        </configuration>
                     </execution>
                     <execution>
                         <id>debug</id>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
                         <configuration>
-                            <options>
-                                <option>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
-                            </options>
+                            <arguments>
+                                <argument>-XX:NewRatio=1</argument>
+                                <argument>-Xms100m</argument>
+                                <argument>-Xmx100m</argument>
+                                <argument>--enable-native-access=javafx.graphics</argument>
+                                <argument>--sun-misc-unsafe-memory-access=allow</argument>
+                                <!--suppress UnresolvedMavenProperty -->
+                                <argument>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</argument>
+                                <argument>--module-path</argument>
+                                <modulepath/>
+                                <argument>--module</argument>
+                                <argument>${appModule}/${appMainClass}</argument>
+                            </arguments>
                         </configuration>
                     </execution>
                 </executions>
